Signed-off-by: yezhouan <yezhouan@qq.com>

--- a/game.html
+++ b/game.html
@@ -196,7 +196,7 @@
 					}
 					for(i = 1; i < len; i++){
 						if(checkNull(item, row + i, col + i)){
-							temp += item[row+i][col-i];
+							temp += item[row + i][col + i];
 						}else{
 							break;
 						}
